--- a/urbancare_final/Views/User/MakeComplaint.cshtml
+++ b/urbancare_final/Views/User/MakeComplaint.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Make a Complaint";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<link rel="stylesheet" href="~/css/makecomplaint.css" asp-append-version="true" />
 <h2>Make a Complaint</h2>
 
 <form asp-action="MakeComplaint" asp-controller="User" method="post" enctype="multipart/form-data">
